--- a/SwiftUI/SwiftUI.csproj
+++ b/SwiftUI/SwiftUI.csproj
@@ -3,15 +3,18 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>preview</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+
+    <!-- FIXME: Currently need both: "Nullable" for Windows, "NullableContextOptions" for Mac -->
+    <Nullable>enable</Nullable>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
   <ItemGroup>
-    <Folder Include="Interop\" />
+    <Folder Include="Swift\" />
+    <Folder Include="SwiftUI\" />
+    <Folder Include="Swift\Interop\" />
+    <Folder Include="SwiftUI\Interop\" />
   </ItemGroup>
 </Project>
