--- a/XamMacSwiftUITest/XamMacSwiftUITest.csproj
+++ b/XamMacSwiftUITest/XamMacSwiftUITest.csproj
@@ -81,9 +81,9 @@
     </NativeReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SwiftUI\SwiftUI.csproj">
+    <ProjectReference Include="..\Swift\Swift.csproj">
       <Project>{31E05277-F5C7-47C7-988B-EFA3A8057F07}</Project>
-      <Name>SwiftUI</Name>
+      <Name>Swift</Name>
     </ProjectReference>
     <ProjectReference Include="..\SwiftUI.Mac\SwiftUI.Mac.csproj">
       <Project>{9F07ACCC-8357-4E81-9EAA-E238752B7977}</Project>
