--- a/SwiftUI.Tests/SwiftUI.Tests.csproj
+++ b/SwiftUI.Tests/SwiftUI.Tests.csproj
@@ -13,6 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SwiftUI\SwiftUI.csproj" />
+    <ProjectReference Include="..\Swift\Swift.csproj" />
   </ItemGroup>
 </Project>
