--- a/src/Swift/Swift.csproj
+++ b/src/Swift/Swift.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>preview</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -16,5 +16,8 @@
     <Folder Include="SwiftUI\" />
     <Folder Include="Swift\Interop\" />
     <Folder Include="SwiftUI\Interop\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="4.7.0" />
   </ItemGroup>
 </Project>
