Clean up; don't leak all over the place

--- a/XamMacSwiftUITest.FSharp/XamMacSwiftUITest.FSharp.fsproj
+++ b/XamMacSwiftUITest.FSharp/XamMacSwiftUITest.FSharp.fsproj
@@ -9,8 +9,8 @@
     <RootNamespace>XamMacSwiftUITest.FSharp</RootNamespace>
     <AssemblyName>XamMacSwiftUITest.FSharp</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
+    <TargetFrameworkIdentifier>Xamarin.Mac</TargetFrameworkIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,7 +41,7 @@
     <IncludeMonoRuntime>true</IncludeMonoRuntime>
     <UseSGen>true</UseSGen>
     <UseRefCounting>true</UseRefCounting>
-    <LinkMode>SdkOnly</LinkMode>
+    <LinkMode>None</LinkMode>
     <GenerateTailCalls>true</GenerateTailCalls>
     <PlatformTarget></PlatformTarget>
     <HttpClientHandler></HttpClientHandler>
