--- a/XamMacSwiftUITest/XamMacSwiftUITest.csproj
+++ b/XamMacSwiftUITest/XamMacSwiftUITest.csproj
@@ -73,7 +73,6 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="View.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Swift\Swift.csproj">
@@ -86,10 +85,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <NativeReference Include="..\src\SwiftUIGlue\libSwiftUIGlue.dylib">
-      <Kind>Dynamic</Kind>
+    <NativeReference Include="..\src\SwiftUIGlue\build\Release\SwiftUIGlue.framework">
+      <Kind>Framework</Kind>
       <SmartLink>False</SmartLink>
     </NativeReference>
   </ItemGroup>
+  <Import Project="..\XamSwiftUITestShared\XamSwiftUITestShared.projitems" Label="Shared" Condition="Exists('..\XamSwiftUITestShared\XamSwiftUITestShared.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
 </Project>
