[build] Retool the build to use Swift Package Manager and msbuild
- Clean up the glue build and use Swift Package Manager
- Start assembling all files together in bin/ in preparation for packaging

--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,7 @@ Generated\ Files/
 
 # Xcode
 xcuserdata/
+DerivedData/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -406,3 +407,9 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
+
+# SwiftPM
+.build
+build/
+src/SwiftUIGlue/*.xcodeproj
+xcuserdata/
