Retool the build and start producing nuget package (#7)
* [build] Retool the build to use Swift Package Manager and msbuild

- Clean up the glue build and use Swift Package Manager
- Start assembling all files together in bin/ in preparation for packaging

* [build] Switch to multi-targeting

* Add nuget packaging and get everything working again

* [build] Move to LinkWith and binding project

This causes the native libs to be embedded in the assemblies,
making everything simpler.

* [Build] Add Azure pipeline, so we get builds on check-in and PRs.

* [build] Regenerate xcodeproj if project.pbxproj is missing

This might happen due to running `git clean` without passing -d

* Normalize whitespace in azure-pipelines.yaml

* Convert Info.plist to XML

This will be better for version control in the future

Co-authored-by: CartBlanche <savagesoftware@gmail.com>

--- a/XamMacSwiftUITest/XamMacSwiftUITest.csproj
+++ b/XamMacSwiftUITest/XamMacSwiftUITest.csproj
@@ -55,9 +55,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Mac" />
-    <Reference Include="netstandard">
-      <HintPath>/Library/Frameworks/Xamarin.Mac.framework/Versions/Current/lib/mono/4.5/Facades/netstandard.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -69,20 +66,10 @@
     <Compile Include="AppDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\Swift\Swift.csproj">
+    <ProjectReference Include="..\src\SwiftUI\SwiftUI.csproj">
       <Project>{31E05277-F5C7-47C7-988B-EFA3A8057F07}</Project>
-      <Name>Swift</Name>
+      <Name>SwiftUI</Name>
     </ProjectReference>
-    <ProjectReference Include="..\src\SwiftUI.Mac\SwiftUI.Mac.csproj">
-      <Project>{9F07ACCC-8357-4E81-9EAA-E238752B7977}</Project>
-      <Name>SwiftUI.Mac</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <NativeReference Include="..\src\SwiftUIGlue\build\Release\SwiftUIGlue.framework">
-      <Kind>Framework</Kind>
-      <SmartLink>False</SmartLink>
-    </NativeReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
 </Project>
