--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,6 +11,7 @@ stages:
       pool:
         vmImage: macOS-latest
       steps:
+      - task: NuGetToolInstaller@1
       - task: MSBuild@1
         displayName: 'Building Swift UI Glue and NuGets via build.proj'
         inputs:
@@ -23,6 +24,7 @@ stages:
       pool:
         vmImage: macOS-latest
       steps:
+      - task: NuGetToolInstaller@1
       - task: MSBuild@1
         displayName: 'Build MacOS C# project XamMacSwiftUITest/XamMacSwiftUITest.csproj'
         inputs:
