--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -7,17 +7,22 @@ stages:
   - stage: Build
     jobs:
     - job: BuildSwiftUIGlueAndNuGets
-      displayName: 'Building Swift UI'
+      displayName: 'Build Xamarin.SwiftUI'
       pool:
         vmImage: macOS-latest
       steps:
       - task: NuGetToolInstaller@1
       - task: MSBuild@1
-        displayName: 'Building Swift UI Glue and NuGets via build.proj'
+        displayName: 'msbuild build.proj'
         inputs:
           solution: build.proj
           configuration: Release
           msbuildArguments: /restore /v:diag
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'test'
+          projects: 'tests/SwiftUI.Tests.csproj'
+          testRunTitle: 'SwiftUI.Tests'
       - task: MSBuild@1
         displayName: 'Build MacOS C# project XamMacSwiftUITest/XamMacSwiftUITest.csproj'
         inputs:
