Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -7,11 +7,12 @@ stages:
   - stage: Build
     jobs:
     - job: BuildSwiftUIGlueAndNuGets
-      displayName: 'Build Xamarin.SwiftUI'
+      displayName: 'Build, test, and package Xamarin.SwiftUI'
       pool:
         vmImage: macOS-latest
       steps:
       - task: NuGetToolInstaller@1
+        displayName: 'Install NuGet tools'
       - task: MSBuild@1
         displayName: 'msbuild build.proj'
         inputs:
@@ -19,9 +20,10 @@ stages:
           configuration: Release
           msbuildArguments: /restore /v:diag
       - task: DotNetCoreCLI@2
+        displayName: 'dotnet test SwiftUI.Tests'
         inputs:
           command: 'test'
-          projects: 'tests/SwiftUI.Tests.csproj'
+          projects: 'tests/SwiftUI.Tests/SwiftUI.Tests.csproj'
           testRunTitle: 'SwiftUI.Tests'
       - task: MSBuild@1
         displayName: 'Build MacOS C# project XamMacSwiftUITest/XamMacSwiftUITest.csproj'
