Make Color inherit from View (cause it is one) and Make ModfiedBackground class more generic and use TView and TBackground, so it works for more than just Color

--- a/src/SwiftUI/SwiftUI.csproj
+++ b/src/SwiftUI/SwiftUI.csproj
@@ -46,6 +46,11 @@
   <ItemGroup>
     <Compile Remove="SwiftUI\TextExtensions.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="SwiftUI\ModifiedBackground.cs">
+      <SubType></SubType>
+    </Compile>
+  </ItemGroup>
   <Target Name="CreateDummyApiDefinition" BeforeTargets="_GenerateBindings">
     <WriteLinesToFile Lines="" File="@(ObjcBindingApiDefinition)" Condition="!Exists('@(ObjcBindingApiDefinition)')" />
   </Target>
