--- a/XamMacSwiftUITest/XamMacSwiftUITest.csproj
+++ b/XamMacSwiftUITest/XamMacSwiftUITest.csproj
@@ -45,7 +45,7 @@
     <IncludeMonoRuntime>true</IncludeMonoRuntime>
     <UseSGen>true</UseSGen>
     <UseRefCounting>true</UseRefCounting>
-    <LinkMode>None</LinkMode>
+    <LinkMode>SdkOnly</LinkMode>
     <GenerateTailCalls>true</GenerateTailCalls>
     <HttpClientHandler></HttpClientHandler>
     <XamMacArch></XamMacArch>
